Added - Planet Jump listener, interface to notify when a planet has finished jumping via rift generator (for modders)
Added - Disrupt Danger to all IndEvo Industries and Structures
Adjusted - Rules.csv $market -> $marketName for 0.96
Adjusted - Code Changes for 0.96
Adjusted - All industry images got touch-ups to bring them more in line with vanilla

Pets
todo: Pets dropping from explo / rare pets never show up in store
todo: Admiral Pirrot and the Starcracker-class Breadnought
todo: Parrot-Class Superclaw
Added - Pets: Add them to your ship, feed em, make em happy, and they'll accompany you! And die!
Added - Research Project for a rare Pet
Added - Animal Center: Store, manage, rename, euthanize and buy pets here! Comes with a station and dodgy animal sellers.
Added - Animal Centers to Gilead, Jangala, Fikenhild

Automated Shipyards
Added - Rare chance for a ship to be an automated variant, usable without the skill
Adjusted - new interaction image (the old one was kinda trash)

Salvage Interactions
Adjusted - Default columns for ship picking on Ship Sacrifice event increased from 5 to 8
Fixed - "Exploding Room" special can now pick (certain) Industrial Evolution items again

Minefields
Added - Mines now get temporarily disabled by an interdiction pulse
Added - Tooltip showing controlling entity
Adjusted - Made NPC fleets react to them better (no more jiggling around)
Fixed - Base damage halved
Fixed - Damage now properly scales with fleet size (hit chance is still fleet size and speed)

Items
Adjusted - Simulation Engine - Added tooltip info about scaling effect
Adjusted - Neural Compounds - Clarified tooltip if senate with item is in range or not
Fixed - Planet "in Range" tooltip no longer incorrectly states 12 LY range restriction for hypertransmitter, it's infinite as intended
Fixed - Crash when tech locator tries to point to a system that has no hyperspace anchor (????)

Artillery