@@ -1,7 +1,7 @@
 name,id,tier,rarity,base value,range,damage/second,damage/shot,emp,impact,turn rate,OPs,ammo,ammo/sec,reload size,type,energy/shot,energy/second,chargeup,chargedown,burst size,burst delay,min spread,max spread,spread/shot,spread decay/sec,beam speed,proj speed,launch speed,flight time,proj hitpoints,autofireAccBonus,extraArcForAI,hints,tags,groupTag,tech/manufacturer,for weapon tooltip>>,primaryRoleStr,speedStr,trackingStr,turnRateStr,accuracyStr,customPrimary,customPrimaryHL,customAncillary,customAncillaryHL,noDPSInTooltip,number
-Cryo Artillery,IndEvo_cryoartillery,3,,50000,800,,1000,,50,20,16,,,,FRAGMENTATION,350,,0,1,,,0,3,0.5,3,,800,,,,,,,"energy15, no_dealer, restricted",,Replicated,,General,,,,,,,,,,22.25
-Matter Degrader,IndEvo_degrader,3,,25000,500,,25,,5,30,8,,,,HIGH_EXPLOSIVE,50,,0,3,4,0.2,4,4,,,,700,,,,,,,"he10, no_dealer, restricted",,Replicated,,Anti Armor,,,,Spread Pattern,Each shot deals an additional 100 damage to armor over 10 seconds. This damage is not reduced by armor.,100 | 10,,,,22.25
-Causality Disturber,IndEvo_causalitygun,3,,100000,900,1200,,600,0,7,30,,,,KINETIC,,1360,0.5,0.7,1.6,4,,,,,10000,,,,,,FIRE_WHEN_INEFFICIENT,,"kinetic20, beam17, LR, no_dealer, restricted",,Replicated,,General,,,,,"Hits on hull or armor frequently arc to weapons and engines, dealing extra EMP and energy damage. Hits on shields have a chance to generate a shield-penetrating arc based on the target's hard flux level.",,,,,29.1
+Cryo Artillery,IndEvo_cryoartillery,3,,50000,800,,1200,,50,20,16,,,,FRAGMENTATION,480,,0,1.2,,,0,3,0.5,3,,800,,,,,,,"energy15, no_dealer, restricted",,Replicated,,General,,,,,,,,,,22.25
+Matter Degrader,IndEvo_degrader,3,,25000,500,,25,,5,30,8,,,,HIGH_EXPLOSIVE,50,,0,2,4,0.2,4,4,,,,700,,,,,,,"he10, no_dealer, restricted",,Replicated,,Anti Armor,,,,Spread Pattern,Each shot deals an additional 100 damage to armor over 10 seconds. This damage is not reduced by armor.,100 | 10,,,,22.25
+Causality Disturber,IndEvo_causalitygun,3,,100000,1000,1200,,1200,0,7,30,,,,KINETIC,,1360,0.5,0.7,1.6,4,,,,,10000,,,,,,FIRE_WHEN_INEFFICIENT,,"kinetic20, beam17, LR, no_dealer, restricted",,Replicated,,General,,,,,"Hits on hull or armor frequently arc to weapons and engines, dealing extra EMP and energy damage. Hits on shields have a chance to generate a shield-penetrating arc based on the target's hard flux level.",,,,,29.1
 Pulsar Carbine,IndEvo_pulsedcarbine,2,,50000,900,,80,,5,15,15,30,2.5,10,KINETIC,72,,0,0.1,,,,,,,,1000,,,,,,,"kinetic16, no_dealer, restricted",,Replicated,,Anti Shield,,,,,Shots may lose cohesion and dissolve. %s of the shots reach half the maximum range and %s of the shots reach full range.,100% | 50%,,,,22.25
 Riftpulse Cycler,IndEvo_riftgun,1,,25000,500,,40,,0,50,8,,,,ENERGY,64,,0.333333,0,,,,,,,,1000,,,,,,,"energy11, no_dealer, restricted",,Replicated,,General,,,,,"Projectiles have a chance to spawn rifts on impact, detonating for %s damage each.",200,,,,19.25
 Riftpulse Minelayer,IndEvo_riftgun_minelayer,0,,,,,200,,25,,,,,,ENERGY,0,,,,1,,,,,,,0,0,20,1000,,,SYSTEM,,,Unknown,,,,,,,,,,,,38.5
