@@ -27,7 +27,7 @@ import com.fs.starfarer.api.ui.TooltipMakerAPI;
 import com.fs.starfarer.api.util.IntervalUtil;
 import com.fs.starfarer.api.util.Misc;
 import indevo.industries.artillery.conditions.ArtilleryStationCondition;
-import indevo.industries.artillery.entities.ArtilleryScript;
+import indevo.industries.artillery.scripts.ArtilleryScript;
 import indevo.industries.artillery.entities.ArtilleryStationEntityPlugin;
 import indevo.utils.ModPlugin;
 import org.json.JSONException;
