@@ -1,4 +1,4 @@
-Hidden Arcologies
+done Hidden Arcologies
 •	Negate all conditions that affect the surface (temp, meteors…)
 •	Increase defence
 •	Decrease all output by 2
@@ -40,7 +40,7 @@ Corporate Governance
 •	Incentives are twice as expensive (or more?)
 •	Can shrink
 
-Underworld Governance
+done Underworld Governance
 x •	Less stability = more income
 x •	Increased illegal commodity outputs
 x •	Increased fleet size
